tests/int/snapshots/r#mod__int__use_command__module_expansion.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - expansion
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
