tests/int/snapshots/r#mod__int__use_command__module_expansion_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - expansion
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
*
constants::{MODULE_NAME_TEST, MODULE_NAME_TESTS, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
formatter::use_tree_to_string

----- stderr -----
