tests/int/snapshots/r#mod__int__use_command__module_expansion_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - expansion
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
*
constants::MODULE_NAME_TEST
constants::MODULE_NAME_TESTS
constants::PATH_QUALIFIER_CRATE
constants::PATH_QUALIFIER_SELF
constants::PATH_QUALIFIER_SUPER
formatter::use_tree_to_string

----- stderr -----
