tests/int/snapshots/r#mod__int__use_command__module_formatter.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - formatter
---
success: true
exit_code: 0
----- stdout -----
constants::PATH_QUALIFIER_CRATE

----- stderr -----
