tests/int/snapshots/r#mod__int__use_command__module_formatter_flags_t_e.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - formatter
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
*
consts::PATH_QUALIFIER_CRATE

----- stderr -----
