tests/int/snapshots/r#mod__int__use_command__module_lib.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - lib
---
success: true
exit_code: 0
----- stdout -----
crate::analysis::visit::UseVisitor
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::{DEFAULT_SRC_DIR, MODULE_FILE_NAME, PATH_QUALIFIER_CRATE}
crate::constants::{MODULE_NAME_TEST, MODULE_NAME_TESTS, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::module::analyzer::{AnalyzerError, CrateAnalyzer}
crate::module::discover::{CrateInfo, CrateInfoError}
crate::module::expand::is_test_module
crate::module::expand::{expand_path_to_string, expand_use_tree, extract_public_items, is_internal_path, is_internal_use, is_test_module}
crate::module::format::{expand_use_tree_to_paths, strip_crate_prefix, truncate_path, use_tree_to_string}
crate::module::locate::resolve_module_path_to_file
crate::module::locate::{find_submodule, get_src_dir}
super::path::{GroupItem, PathPrefix, TypeReference}

----- stderr -----
